--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Sistema WEB para la empresa \"MI TIENDITA ONLINE\", dicha empresa se encuentra expandiendo sus operaciones y requiere un sistema en donde sus clientes puedan ingresar a comprar sus productos (Artículos de consumo diario), así como gestionar las entregas de sus pedidos.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "migrate": "npx sequelize-cli db:migrate --env local --config config/config.js",
+    "seed": "npx sequelize-cli db:seed:all --env local --config config/config.js",
+    "rollback": "npx sequelize-cli db:migrate:undo --env local --config config/config.js"
   },
   "repository": {
     "type": "git",
@@ -17,14 +21,22 @@
   },
   "homepage": "https://github.com/PabloCoti/mi_tiendita_online#readme",
   "dependencies": {
+    "@sequelize/mssql": "^7.0.0-alpha.43",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.37.5",
+    "tedious": "^18.6.1"
   },
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2"
+  }
 }
